[package]
name = "deepzero-rust"
version = "0.1.0"
authors = ["saegusa01 <saegusa.reiichi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.0"
ndarray-rand = "0.14.0"
num-traits = "0.2"